--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 
     <h1 class="flashy"> This is our cupcake shop </h1>
 
-    
+    <img src="img/image1.jpg">
 
+    <img src="img/image2.jpg">
+
+    <img src="img/image3.jpeg">
 
     <h2> Our cupcakes are the best </h2>
 
